# AnData

./: CMakeLists.txt  main.cpp
include/: update-include-links.sh
include/files/: DatabaseManager.h  FileBlockManager.h  TableManager.h
include/numbers/: Integers.h
include/objects/: FixedArray.h  FixedColumn.h
include/objects/column/: ColumnInterface.h  FixedLengthColumn.h
include/objects/table/: Table.h  TableMetaData.h
include/operators/: ArrayOperator.h  ArrayTransformer.h
include/page/: Page.h  PageManager.h  PageMappedObject.h  PageSet.h
include/series/: Array.h  Matrix.h  Series.h
include/space_manager/: IndexedFreeSpaceManager.h
lib/: update-lib-links.sh
old/include/: DataBaseException.h
old/include/column/: FixedColumn.h
old/include/numbers/: Number.h
old/include/objects/: DbObject.h  FixedColumn.h
old/include/operators/: MatrixOperator.h
old/include/page/: ObjectPages.h  PageManager.h  PageMappedObject.h
old/include/series/: Array.h  Matrix.h
old/src/column/: FixedColumn.cpp
old/src/objects/: DbObject.cpp  FixedColumn.cpp
old/src/operators/: ArrayOperator.cpp
old/src/page/: ObjectPages.cpp  Page.cpp  (+2 more)
src/: CMakeLists.txt  data.cpp
src/files/: DatabaseManager.cpp  FileBlockManager.cpp  TableManager.cpp
src/numbers/: Integers.cpp  Number.cpp
src/objects/: BigIntegerArray.cpp  DoubleArray.cpp  FixedArray.cpp  FixedColumn.cpp  FixedLengthColumn.cpp  FloatArray.cpp  IndexedFreeSpaceManager.cpp  IntegerColumn.cpp  PageMappedObject.cpp  SmallIntegerArray.cpp  Table.cpp  TableMetaData.cpp
src/operators/: ArrayOperator.cpp  ArrayTransformer.cpp  MatrixOperator.cpp  number_algorithms.hpp
src/page/: Page.cpp  PageManager.cpp  PageMappedObject.cpp  PageSet.cpp
src/series/: Array.cpp  Matrix.cpp  Series.cpp
src/space_manager/: IndexedFreeSpaceManager.cpp
(+7 files in other folders)
